2007-02-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* TnyFolderStoreObserver notifications

2007-02-14  Oystein Gisnas  <oystein@gisnas.net>

	* Maemo packaging scripts: add missing .install for lib-maemo

2007-02-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Introduction of the TnyFolderStoreChange and TnyFolderStoreObserver

2007-02-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various error handling situations when the IMAP service went offline
	or something with the connection happened
	* Connection fails, retry after reconnect stuff

2007-02-13  Oystein Gisnas  <oystein@gisnas.net>

	* Maemo packaging scripts: split into one package per library

2007-02-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for EXPUNGE and FETCH unsolicited events during IDLE. This
	should complete the support for IDLE and Push-Email. From now on we
	can start truly testing this.

2007-02-12  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
	
	* Make TnyCamelSendQueue subclassable - add accessors
	  for setting the TnyCamelTransportAccount, and _flush

2007-02-10  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various bugfixes for the IDLE feature
	* Error reporting for the TnySendQueue
	* Bugfix for the Maildirs of the tnycamelsendqueue
	* Support in the IDLE (Push E-mail) feature for EXPUNGE
	* Major rewrites in camel-lite and important changes related to memory
	and reference counting in TnyCamelFolder and CamelFolder. Please keep
	an eye on memory from now on, as things related to reference counting
	of folders has changed.
	* Added reference debugging instrumentation to camel-lite
	* Rewrote certain parts of the IDLE support
	* Bugfixes in the condstore support

	* This was a major API change

2007-02-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* Removed the public constructor of TnyCamelFolder, use the private
	one if you really need it (normal people don't, and you can make the
	library crash of you use it wrongfully)