@@ -84,6 +84,7 @@ struct _TnyCamelFolderClass
 	void (*get_folders_func) (TnyFolderStore *self, TnyList *list, TnyFolderStoreQuery *query, GError **err);
 	void (*remove_folder_func) (TnyFolderStore *self, TnyFolder *folder, GError **err);
 	TnyFolder* (*create_folder_func) (TnyFolderStore *self, const gchar *name, GError **err);
+	TnyFolderStore* (*get_folder_store_func) (TnyFolder *self);
 	void (*add_store_observer_func) (TnyFolderStore *self, TnyFolderStoreObserver *observer);
 	void (*remove_store_observer_func) (TnyFolderStore *self, TnyFolderStoreObserver *observer);
 
