@@ -1,3 +1,8 @@
+2007-02-16  Sergio Villar Senin  <svillar@igalia.com>
+
+	* Added tny_folder_get_folder_store(): retrieves the folder store
+	of a given folder
+
 2007-02-13  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* TnyFolderStoreObserver notifications
